[b][color=orange]v3.15[/color], 05.12.2017[/b][list]
[*]Fix an error in UnitFrame install.[/list]

[b][color=orange]v3.14[/color], 04.12.2017[/b][list]
[*]Remove detached portrait feature. Let it be Benik's baby <3
[*]Color the mail label in the notifications.
[*]Fix WeakAura skin.[/list]

[b][color=orange]v3.13[/color], 03.12.2017[/b][list]
[*]Add a "EasyChat" function, which allows you to press tab and select a channel.
[*]Account for changes with ElvUI (settings for combat indicator)
[*]IMPORTANT: Remove v1 of my Layout.
[*]Update the GameMenu. ;)
[*]Remove EncounterJournalInfo. Causes too much errors.
[*]Added more frames to be movable.
[*]Small code adjustments.[/list]

[b][color=orange]v3.12[/color], 12.11.2017[/b][list]
[*]Update/Added a lot of skins.
[*]Updated the EFL icons.
[*]Updated my Layout v2 + new texture.
[*]Add an ObjectiveTracker Hider.
[*]Added a chat button to increase the chat size.
[*]Add an own style for the close buttons.
[*]Prevent a rar nil error in FlightPoint.[/list]

[b][color=orange]v3.11[/color], 27.10.2017[/b][list]
[*]Fix the UnitFrame tags for v1.
[*]Updated my skinning function for stripes/gradient.[/list]

[b][color=orange]v3.10[/color], 27.10.2017[/b][list]
[*]Change the frame strata for the locPanel & Notifications.
[*]Add QuickJoinNotifications to my Notifications.
[*]Add SpeedyLoad.
[*]Massive Cleanup.
[*]Added some new skins & updated some skins.
[*]Add new tag: mUI-resting.
[*]Updated Expressway & Roboto-Black font.
[*]Small layout adjustments for v2.
[*]Use an own texture for the MailIcon.[/list]

[b][color=orange]v3.09[/color], 01.10.2017[/b][list]
[*]Fix a lua error after reload in the BigWigs skin.
[*]Add korean locale file.
[*]Adjust Orderhall Commandbar skin.
[*]Update ObjectiveTracker skin.
[*]Update filterPriority in install.
[*]Add a skin for the RaidFrame.
[*]Add a new tags "health-current-mUI" shows 2 diggets; "power:current-mUI" shows power if 0 instead of hiding it.